force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Label_Adhesive__c.field-meta.xml
<CustomField>
    <fullName>Label_Adhesive__c</fullName>
    <label>Label Adhesive</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Adhesive (PSL)</fullName>
            </value>
            <value>
                <fullName>Hot Melt</fullName>
            </value>
            <value>
                <fullName>Wet Glue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>