force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Label_Inspection_Make__c.field-meta.xml
<CustomField>
    <fullName>Label_Inspection_Make__c</fullName>
    <label>Label Inspection Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>