force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Label_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Label_Orientation__c</fullName>
    <label>Label Orientation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optical Spotting</fullName>
            </value>
            <value>
                <fullName>Mechanical Spotting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>