force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Label_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Label_Supplier__c</fullName>
    <label>Label Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>