force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Bottle_Handling__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Bottle_Handling__c</fullName>
    <label>Labeller Bottle Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star Wheels</fullName>
            </value>
            <value>
                <fullName>Tyrolon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>