force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Bottle_Handling_Other__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Bottle_Handling_Other__c</fullName>
    <label>Labeller Bottle Handling Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>