force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Make__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Make__c</fullName>
    <label>Labeller Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>