force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Model__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Model__c</fullName>
    <label>Labeller Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>