force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Spotting_Feature__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Spotting_Feature__c</fullName>
    <label>Labeller Spotting Feature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>