force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Labeller_Tax_Tape__c.field-meta.xml
<CustomField>
    <fullName>Labeller_Tax_Tape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Labeller - Tax Tape</label>
    <type>Checkbox</type>
</CustomField>