force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <label>Line ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>