force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Loading__c.field-meta.xml
<CustomField>
    <fullName>Loading__c</fullName>
    <label>Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLT</fullName>
            </value>
            <value>
                <fullName>AGV&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>