force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>