force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Manually_Operated__c.field-meta.xml
<CustomField>
    <fullName>Manually_Operated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Operated</label>
    <type>Checkbox</type>
</CustomField>