force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Massflow__c.field-meta.xml
<CustomField>
    <fullName>Massflow__c</fullName>
    <label>Massflow</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Falling Bottles</fullName>
            </value>
            <value>
                <fullName>Riding Bottles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>