force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Massflow_Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Massflow_Accumulation__c</fullName>
    <label>Massflow Accumulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>FIFO</fullName>
            </value>
            <value>
                <fullName>FIFO (Single)</fullName>
                <isActive>false</isActive>
                <label>FIFO (Single)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>