force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Massflow_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Massflow_Transportation__c</fullName>
    <label>Massflow Transportation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Massflow</fullName>
            </value>
            <value>
                <fullName>Single-file</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Wet Lube</fullName>
            </value>
            <value>
                <fullName>Dry Lube</fullName>
            </value>
            <value>
                <fullName>No Lube</fullName>
            </value>
            <value>
                <fullName>Falling Bottles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>