force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Maximum_Pressure_Bar__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pressure_Bar__c</fullName>
    <label>Maximum Pressure (Bar)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>