force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/No_of_Labelling_Stations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Labelling_Stations__c</fullName>
    <label>No. of Labelling Stations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>