force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/No_of_Pedestals__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pedestals__c</fullName>
    <label>No. of Pedestals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>