force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Number_of_Packers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packers__c</fullName>
    <label>Number of Packers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>