force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Number_of_Retorts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retorts__c</fullName>
    <label>Number of Retorts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>