force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Opening_Torque_lbs_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Opening_Torque_lbs_Maximum__c</fullName>
    <label>Opening Torque (lbs) Maximum</label>
    <length>4</length>
    <type>Text</type>
</CustomField>