force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Opening_Torque_lbs_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Opening_Torque_lbs_Minimum__c</fullName>
    <label>Opening Torque (lbs) Minimum</label>
    <length>4</length>
    <type>Text</type>
</CustomField>