force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P1_Case_Pack_Carton_Erector_Cycles_min__c.field-meta.xml
<CustomField>
    <fullName>P1_Case_Pack_Carton_Erector_Cycles_min__c</fullName>
    <label>P1-Case Pack+Carton Erector- Cycles/min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>