force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P1_Cluster_Pack_Number_of_Cycles_per_min__c.field-meta.xml
<CustomField>
    <fullName>P1_Cluster_Pack_Number_of_Cycles_per_min__c</fullName>
    <label>P1-Cluster Pack-Number of Cycles per min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>