force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P1_Wraparound_Case_No_of_Cycles_per_Min__c.field-meta.xml
<CustomField>
    <fullName>P1_Wraparound_Case_No_of_Cycles_per_Min__c</fullName>
    <label>P1-Wraparound Case-No of Cycles per Min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>