force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P2_Card_Shrink_No_Cycles_per_Min__c.field-meta.xml
<CustomField>
    <fullName>P2_Card_Shrink_No_Cycles_per_Min__c</fullName>
    <label>P2- Card &amp; Shrink No. Cycles per Min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>