force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P2_Cluster_Pack__c.field-meta.xml
<CustomField>
    <fullName>P2_Cluster_Pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2 - Cluster Pack</label>
    <type>Checkbox</type>
</CustomField>