force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/P2_Tray_Shrink_No_of_Cycles_per_Minute__c.field-meta.xml
<CustomField>
    <fullName>P2_Tray_Shrink_No_of_Cycles_per_Minute__c</fullName>
    <label>P2-Tray &amp; Shrink No of Cycles per Minute</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>