force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pack_Printer__c.field-meta.xml
<CustomField>
    <fullName>Pack_Printer__c</fullName>
    <label>Pack Printer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>