force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pack_Printer_Model__c.field-meta.xml
<CustomField>
    <fullName>Pack_Printer_Model__c</fullName>
    <label>Pack Printer - Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>