force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shrouded</fullName>
            </value>
            <value>
                <fullName>Fuse Seal</fullName>
            </value>
            <value>
                <fullName>Unshrouded</fullName>
            </value>
            <value>
                <fullName>Compression</fullName>
            </value>
            <value>
                <fullName>PLP (Solid)</fullName>
            </value>
            <value>
                <fullName>PLP (Corrugated)</fullName>
            </value>
            <value>
                <fullName>Load Hog</fullName>
            </value>
            <value>
                <fullName>Horizontal Band</fullName>
            </value>
            <value>
                <fullName>Vertical Band</fullName>
            </value>
            <value>
                <fullName>Top Frame</fullName>
            </value>
            <value>
                <fullName>Inverted Tray</fullName>
            </value>
            <value>
                <fullName>Upright Tray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>