force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_1_Tray_Shrink__c.field-meta.xml
<CustomField>
    <fullName>Packer_1_Tray_Shrink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packer 1 - Tray &amp; Shrink</label>
    <type>Checkbox</type>
</CustomField>