force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_1_Wraparound_Case__c.field-meta.xml
<CustomField>
    <fullName>Packer_1_Wraparound_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packer 1 - Wraparound Case</label>
    <type>Checkbox</type>
</CustomField>