force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_2_Case_Packer_Carton_Erector__c.field-meta.xml
<CustomField>
    <fullName>Packer_2_Case_Packer_Carton_Erector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packer 2 - Case Packer &amp; Carton Erector</label>
    <type>Checkbox</type>
</CustomField>