force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_2_Model__c.field-meta.xml
<CustomField>
    <fullName>Packer_2_Model__c</fullName>
    <label>Packer 2 - Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>