force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_2_No_of_Bottles_Per_Carton__c.field-meta.xml
<CustomField>
    <fullName>Packer_2_No_of_Bottles_Per_Carton__c</fullName>
    <label>Packer 2 - No of Bottles Per Carton</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>