force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_3_Make__c.field-meta.xml
<CustomField>
    <fullName>Packer_3_Make__c</fullName>
    <label>Packer 3 - Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>