force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Packer_3_No_of_Bottles_lifted_per_lift__c.field-meta.xml
<CustomField>
    <fullName>Packer_3_No_of_Bottles_lifted_per_lift__c</fullName>
    <label>Packer 3 - No of Bottles lifted per lift</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>