force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pallet_Records__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Records__c</fullName>
    <label>Pallet Records</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scanned</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>