force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pallet_Types__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Types__c</fullName>
    <label>Pallet Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STD (white)</fullName>
            </value>
            <value>
                <fullName>CHEP (Blue)</fullName>
            </value>
            <value>
                <fullName>LPR (Red)</fullName>
            </value>
            <value>
                <fullName>Heat Treated</fullName>
            </value>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>VMF</fullName>
            </value>
            <value>
                <fullName>EPAL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CHEP Euro (Blue)</fullName>
            </value>
            <value>
                <fullName>LPL (Red)</fullName>
                <isActive>false</isActive>
                <label>LPL (Red)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>