force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Hand_Manually_Stacked__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Hand_Manually_Stacked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palletising - Hand/Manually Stacked</label>
    <type>Checkbox</type>
</CustomField>