force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Layer_Divider__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Layer_Divider__c</fullName>
    <label>Palletising - Layer Divider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>PLP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>