force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Make__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Make__c</fullName>
    <label>Palletising - Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>