force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Model__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Model__c</fullName>
    <label>Palletising - Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>