force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Pallet_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Pallet_Type_Other__c</fullName>
    <label>Palletising - Pallet Type - Other</label>
    <length>30</length>
    <type>Text</type>
</CustomField>