force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Palletising_Robotic__c.field-meta.xml
<CustomField>
    <fullName>Palletising_Robotic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palletising - Robotic</label>
    <type>Checkbox</type>
</CustomField>