force-app/main/default/objects/Customer_Technical_Report_CTR__c/fields/Pasteuriser_number_of_decks__c.field-meta.xml
<CustomField>
    <fullName>Pasteuriser_number_of_decks__c</fullName>
    <label>Pasteuriser - Number of Decks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>